--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>StockTickerCenter</groupId>
+  <groupId>com.stockcenter</groupId>
   <artifactId>StockTickerCenter</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
@@ -13,7 +13,6 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
-
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -21,5 +20,38 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+	  <groupId>org.apache.mina</groupId>
+	  <artifactId>mina-core</artifactId>
+	  <version>2.0.4</version>
+    </dependency>
+    <dependency>    
+      <groupId>net.sf.json-lib</groupId>    
+      <artifactId>json-lib</artifactId>    
+      <version>2.4</version>    
+    <classifier>jdk15</classifier>    
+    </dependency>     
   </dependencies>
+  
+ <build>
+ <plugins>
+  <plugin>
+   <groupId>org.codehaus.mojo</groupId>
+   <artifactId>exec-maven-plugin</artifactId>
+   <version>1.1.1</version>
+   <executions>
+    <execution>
+     <phase>test</phase>
+     <goals>
+      <goal>java</goal>
+     </goals>
+     <configuration>
+      <mainClass>com.stockcenter.StockMinaServer</mainClass>
+     </configuration>
+    </execution>
+   </executions>
+  </plugin>
+ </plugins>
+</build>
+  
 </project>
